# z10

./: CMakeLists.txt  R.h  homewindow.cc  homewindow.h  main.cc
assets/color/: tabitemtextcolor.xml
assets/drawable/: btn_00ffffff_r25.xml  btn_1affffff_r25.xml  btn_6643464a_r25.xml  btn_border_6bffffff_r22.xml  mode_add_line.xml  popwindow_bg.xml  popwindow_btn_bg.xml  popwindow_btn_bg_l.xml  popwindow_btn_bg_r.xml  progressbar_background.xml  progressbar_progress.xml  scrollbar_thumb_vertical.xml  selec_background.xml  seting_page_date_btn_track.xml  seting_page_date_off_thumb.xml  seting_page_date_off_track.xml  seting_page_date_on_thumb.xml  seting_page_date_on_track.xml  setting_btn_blue_r30.xml  setting_light_seekbar.xml  setting_numpick_select_100x200.xml  setting_numpick_select_68x68.xml  setting_uv_checkbox.xml  setting_uv_numpicker_r5_gb.xml  tabitembackground.xml  text_1b1c1e_r20.xml
assets/layout/: activity_header.xml  home_view.xml  lvxin.xml  mode_add.xml  mode_edit.xml  network.xml  network_list.xml  network_now.xml  network_text.xml  page_item.xml  page_item_bingkuai.xml  page_item_lengshui.xml  page_item_zidingyi.xml  page_setting.xml  page_setting_time.xml  page_unlock.xml  page_uvshajun.xml  popwindow_modedel_hint.xml  popwindow_text_hint.xml  popwindow_tip_hint.xml  progressbar_background.xml  screenlight.xml  setting_mode.xml  setting_mode_list.xml  setting_numpick_100x220.xml  setting_numpick_68x68.xml  tabcustomview.xml  test.xml
assets/values/: ID.xml  array.xml  mode_list.xml  wlan.xml
src/comm/: comm_func.cc  comm_func.h  common.h
(+38 files in other folders)
